# doquedb

./: .gitattributes  .gitignore  BUILDING_PROCEDURE.md  BUILDING_PROCEDURE_ja.md  CORP_CLA.txt  CORP_CLA_ja.txt  INDIV_CLA.txt  INDIV_CLA_ja.txt  README.md  README_ja.md
docs/: howtouse.html  (+14 more)
sydney/Python/: .gitignore  Pipfile  README.md  README_ja.md  pytest.ini  sample.py  setup.cfg  setup.py
sydney/Python/docs/source/: conf.py  index.rst
sydney/Python/src/doquedb/: __init__.py
sydney/Python/src/doquedb/client/: __init__.py  connection.py  constants.py  datasource.py  object.py  port.py  prepare_statement.py  resultset.py  session.py
sydney/Python/src/doquedb/common/: __init__.py  abstracts.py  arraydata.py  constants.py  data.py  instance.py  iostream.py  language.py  scalardata.py  serialdata.py  serializable.py  unicodestr.py
sydney/Python/src/doquedb/driver/: __init__.py  connection.py  cursor.py  dbapi.py
sydney/Python/test/: test_doquedb.py  test_scenario.py
sydney/Python/test/client/: test_connection.py  test_datasource.py  test_port.py  test_resultset.py  test_session.py
sydney/Python/test/common/: test_abstracts.py  test_arraydata.py  test_data.py  test_instance.py  test_iostream.py  test_language.py  test_scalardata.py  test_serialdata.py  test_unicodestr.py
sydney/Python/test/driver/: test_connection.py  test_cursor.py
sydney/Python/test/exception/: __init__.py  test_error_message.py  test_raise_error.py
sydney/Python/test/port/: test_connection.py  test_constants.py
sydney/Python/tools/: ErrorDefinition.xml  make_exception.py
(+9516 files in other folders)
