# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = py-doquedb
author = Ricoh Company, Ltd.
version = 1.0.0
description = Python Client for DoqueDB
long_description = file: README.md

# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
packages = find:
package_dir = 
    =src
python_requires = >=3

[options.packages.find]
where=src
    
